AndroidPermit usage demonstration by hijacking google's sample project
- build.gradle: updated support lib; added vanilla-android, retrolambda
- manifest: replaced deprecated tag
- MainActivity: added reset_permissions menu item; replaced permission
  stuff with AndroidPermit

--- a/Application/src/main/res/menu/main.xml
+++ b/Application/src/main/res/menu/main.xml
@@ -14,8 +14,11 @@
   limitations under the License.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/menu_toggle_log"
-          android:showAsAction="always"
+          app:showAsAction="always"
           android:title="@string/sample_show_log" />
+    <item android:id="@+id/reset_permissions"
+          android:title="Reset permissions" />
 </menu>
